# TNCG15

./: .gitignore  CMakeLists.txt  README.md
Global/: CMakeLists.txt  main.cpp
