cmake_minimum_required(VERSION 3.17)
project(TNCG15)

set(CMAKE_CXX_STANDARD 14)

add_executable(TNCG15
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/TNCG15.iml
        .idea/vcs.xml
        Global/.idea/.gitignore
        Global/.idea/Global.iml
        Global/.idea/misc.xml
        Global/.idea/modules.xml
        Global/.idea/vcs.xml
        Global/CMakeLists.txt
        Global/main.cpp
        glm/glm/glm.hpp)

